# rsr-group-bot

./: .coveragerc  .env.example  .gitignore  LICENSE.md  MANIFEST.in  README.md  requirements.txt  setup.cfg
src/rsr-group-bot/: main.py
src/rsr-group-bot/alert/: alert.py
src/rsr-group-bot/alert/contacts/: contacts.csv.example
src/rsr-group-bot/database/: database.py
src/rsr-group-bot/database/models/: favorite.py
src/rsr-group-bot/database/utils/: base.py
src/rsr-group-bot/logger/: logger.py
