[metadata]
name = rsr-group-bot
version = 0.0.0
license = BSD-3
description = Bot to monitor stock and automatically checkout products.
long_description = file: README.md
author = MHarmony
author_email = contact@mharmony.io

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src

[isort]
multi_line_output = 3
include_trailing_comma = False
float_to_top = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 99

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 99
max-complexity = 18
select = B,C,E,F,W,T4
extend-ignore = E203, W503

[mypy]
files = rsr-group-bot,tests
ignore_missing_imports = true

[tool:pytest]
testpaths = tests
# addopts = "--cov --cov-fail-under=100"